# mhxy-shikong-control

./: .gitignore  LICENSE  NOTICE  README.md  index.html  package-lock.json  package.json
docs/: product-plan.md  workflow-model.md
scripts/: acceptance_plan.py  apply_manifest_variants.py  apply_manual_crop.py  apply_probe_variants.py  apply_triage_candidates.py  audit_asset_store.py  audit_bag_organize_offline.py  audit_capture_policy.py  audit_completion_action_dock.py  audit_control_flow_schema.py  audit_failure_evidence_bundle.py  audit_home_vitality_offline.py  audit_input_safety.py  audit_live_validation_workflow.py  audit_multi_window_isolation_offline.py  audit_queue_readiness.py  audit_quick_step_workbench.py  audit_readiness_taxonomy.py  audit_regression_suite_offline.py  audit_release_cleanup.py  audit_save_coordinator.py  audit_stall_search_offline.py  audit_step_params_contract.py  audit_team_observe_offline.py  audit_workflow_readiness.py  audit_workspace_migration.py  audit_workspace_persistence.py  capture_inventory_items_by_name.py  capture_playbook.py  capture_scene_templates.py  capture_window.py  execution_progress.py  goal_readiness.py  live_acceptance.py  live_background_hotkey_validation.py  migration_status.py  probe_capture_manifest.py  probe_pipeline_templates.py  rapidocr_bridge.py  (+33 more)
src/: main.js  (+15 more)
src-tauri/: Cargo.toml  app.manifest  build.rs  tauri.conf.json
src-tauri/src/: coords.rs  inventory.rs  main.rs  ocr.rs  platform.rs  runtime.rs  single_instance.rs  tray.rs  vision.rs
src-tauri/src/runtime/: capture_health.rs  mod.rs
(+55 files in other folders)
